# fft_onchip

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
includes/: algorithm.cuh  bench.cuh  c64_fft64.cuh  common.cuh  config.hpp  constants.cuh  custom_cute.cuh  generated_tests.cuh  legacy16_fft.cuh  legacy8_fft.cuh  legacy_fft.cuh  perf_test.cuh  reference.cuh  register_cute.cuh  simple_fft.cuh  tensor_fft.cuh  tensor_fft_128.cuh  tensor_fft_16.cuh  tensor_fft_256.cuh  tensor_fft_4096.cuh  tensor_fft_512.cuh  tensor_fft_64.cuh  tensor_fft_64_alt.cuh  tensor_fft_8.cuh  tensor_utils.cuh  tester.cuh  testing.cuh
ptx/: gpu_fft.ptx
scripts/: generate_bench.py  test_all.sh
scripts/results/: configs.csv  resource_dump.txt  resources_t128.txt  resources_t256.txt  resources_t512.txt  resources_t64.txt  resources_t8.txt  results.csv  saturation.csv  saturation_without_io.csv
src/: algorithm.cu  bench.cu  gpu_fft.cu  main.cpp  perf_test.cu  reference.cu  saturation.cu
src/bench/: .gitkeep  test0.cu  test1.cu  test2.cu  test3.cu  test4.cu  test5.cu  test6.cu
